--- a/style.css
+++ b/style.css
@@ -217,6 +217,7 @@ section{
     margin-bottom: 10px;
 }
 .about .about-content .right p{
+    font-family: 'Poppins', sans-serif;
     text-align: justify;
 }
 .about .about-content .right .text span{
